syntax = "proto3";

package auth;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/dratum/auth/pkg/auth_v1";


service AuthV1 {
    rpc Create (CreateRequest) returns (CreateResponse);
    rpc Get (GetRequest) returns (GetResponse);
    rpc Update (UpdateRequest) returns (google.protobuf.Empty);
    rpc Delete (DeleteRequest) returns (google.protobuf.Empty);
};

message RoleInfo {
    google.protobuf.StringValue user = 1;
    google.protobuf.StringValue admin = 2;    
}

message CreateRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    string password_confirm = 4;
    RoleInfo role = 5;
}

message CreateResponse {

}

message GetRequest {

}

message GetResponse {

}

message UpdateRequest {

}

message DeleteRequest {

}